set authmiddleware in api service
